--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <nav>nav</nav>
 
-        <aside>aside</aside>
+        <aside class="clearfix">aside</aside>
 
         <section>section
 
